--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ title: Minimal
 email: blog@minimal.com
 description: > # this means to ignore newlines until "baseurl:"
     Esse é um blog minimalista criado para aprender como funciona essa linda ferramenta que é o Jekyll
-baseurl: "/minimal" # the subpath of your site, e.g. /blog
+baseurl: "/minimal-blog" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site
 twitter_username: minimal_twitter
 github_username:  minimal_github
